--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,43 +1,65 @@
 {
-    "editor.renderWhitespace": "boundary",
-    "editor.wordWrap": "on",
-    "editor.tabSize": 2,
-    "[javascript]": {
-        "editor.tabSize": 2,
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-    },
-    "gitlens.keymap": "alternate",
-    "gitlens.advanced.messages": {
-        "suppressCommitHasNoPreviousCommitWarning": false,
-        "suppressCommitNotFoundWarning": false,
-        "suppressFileNotUnderSourceControlWarning": false,
-        "suppressGitVersionWarning": false,
-        "suppressLineUncommittedWarning": false,
-        "suppressNoRepositoryWarning": false,
-        "suppressResultsExplorerNotice": false,
-        "suppressShowKeyBindingsNotice": true
-    },
-    "gitlens.historyExplorer.enabled": true,
-    "editor.formatOnPaste": true,
-    "eslint.alwaysShowStatus": true,
-    "prettier.disableLanguages": [
-        "js"
-    ],
-    "eslint.autoFixOnSave": true,
-    "eslint.packageManager": "yarn",
-    "emmet.triggerExpansionOnTab": true,
-    "terminal.integrated.fontFamily": "MesloLGS NF",
-    "files.insertFinalNewline": true,
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "files.autoSave": "afterDelay",
-    "[typescript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[scss]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "beautify.config": "",
+  "editor.renderWhitespace": "boundary",
+  "editor.wordWrap": "on",
+  "editor.tabSize": 2,
+  "[javascript]": {
+    "editor.tabSize": 2
+    // "editor.formatOnSave": false,
+    // "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "gitlens.keymap": "alternate",
+  "gitlens.advanced.messages": {
+    "suppressCommitHasNoPreviousCommitWarning": false,
+    "suppressCommitNotFoundWarning": false,
+    "suppressFileNotUnderSourceControlWarning": false,
+    "suppressGitVersionWarning": false,
+    "suppressLineUncommittedWarning": false,
+    "suppressNoRepositoryWarning": false,
+    "suppressResultsExplorerNotice": false,
+    "suppressShowKeyBindingsNotice": true
+  },
+  "gitlens.historyExplorer.enabled": true,
+  "eslint.alwaysShowStatus": true,
+  "eslint.packageManager": "yarn",
+  "emmet.triggerExpansionOnTab": true,
+  "terminal.integrated.fontFamily": "MesloLGS NF",
+  "files.insertFinalNewline": true,
+  // "[typescriptreact]": {
+  //     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  // },
+  "files.autoSave": "afterDelay",
+  // "[typescript]": {
+  //     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  // },
+  "[scss]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "security.workspace.trust.untrustedFiles": "open",
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "cSpell.userWords": [
+    "chakra",
+    "gojs",
+    "reduxjs",
+    "trpc",
+    "ungroupable"
+  ],
+  "cSpell.enableFiletypes": ["*"],
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "vscode.css-language-features"
+  },
+  "debug.javascript.defaultRuntimeExecutable": {
+    "pwa-node": "node"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
